objects/Extension_Request__c.object
<CustomObject>
    <fields>
        <fullName>Audit_Finding__c</fullName>
        <label>Audit Finding</label>
        <referenceTo>Audit_Finding__c</referenceTo>
        <relationshipLabel>Extension Requests Audit Findings</relationshipLabel>
        <relationshipName>Extension_Requests_Audit_Findings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CMPL123Rule_Key_Value__c</fullName>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Extension_RequestcCMPL123_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_On__c</fullName>
        <label>Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action__c</fullName>
        <label>Workflow Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Status__c</fullName>
        <label>Workflow Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Due_Date__c</fullName>
        <label>Current Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Due_Date__c</fullName>
        <label>Proposed Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_for_Extension__c</fullName>
        <label>Reason for Extension</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Extension Request Audit Findings</label>
    <nameField>
        <displayFormat>ER-AF-{00000}</displayFormat>
        <label>ER-AF No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extension Requests Audit Findings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Proposed_Due_Date_cannot_be_in_the_past</fullName>
        <active>true</active>
        <description>Proposed Due Date cannot be in the past.</description>
        <errorConditionFormula>Proposed_Due_Date__c &lt; TODAY()</errorConditionFormula>
        <errorMessage>Proposed Due Date cannot be in the past.</errorMessage>
    </validationRules>
</CustomObject>